# rp-server-rust

./: docker-compose.yml
.devcontainer/: devcontainer.json
app/: Cargo.toml
app/src/: controller.rs  service.rs
app/src/model/: client_data.rs  collection_challenge.rs  collection_user_credential.rs  public_key_credential_creation_options.rs  public_key_credential_parameters.rs  public_key_credential_rp_entity.rs  public_key_credential_user_entity.rs
fido2-client/: package-lock.json  package.json  vite.config.ts
fido2-client/.devcontainer/: Dockerfile  devcontainer.json
fido2-client/src/: main.tsx  utils.ts
fido2-client/src/pages/: Login.tsx
rp-server/.devcontainer/: devcontainer.json
rp-server/app/: Cargo.toml
rp-server/app/src/: constants.rs  error.rs  lib.rs  main.rs  model.rs
rp-server/app/src/controller/: rp_controller.rs
rp-server/app/src/model/: attestation_object.rs  authenticator_data.rs  collection_auth_challenge.rs  collection_challenge.rs  collection_user_credential.rs  fido2_options.rs  public_key_credential_attention.rs  public_key_credential_response.rs  start_usernameless_auth_response.rs  verify_auth_challenge_request.rs
rp-server/app/src/service/: rp_service.rs
rp-server/app/src/webauthn/: validation.rs
