[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
actix-cors = "0.7.1"
derive_builder = "0.20.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_cbor = "0.11.2"
serde_bytes = "0.11.17"
env_logger = "0.11.8"
mongodb = "3.2.2"
base64 = "0.22.1"
log = "0.4.26"
actix-session = { version = "0.10.1", features = ["redis-session"] }
rand = "0.9.2"

[dependencies.uuid]
version = "1.16.0"
features = ["v4"]
